// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders custom component 1`] = `
<h2
  className="box-title"
>
  <div />
</h2>
`;

exports[`renders default 1`] = `
<h3
  className="box-title"
>
  <div />
</h3>
`;
